couple of improvements - Keywords for generating address data added - Debug information was added to the generated source code to enable tracking of which rules are executed. - Test case generation for the specific engines activated. Test cases can be found in the test/acceptance_test/lfet folder. - minor bugs fixed

--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,7 @@ dmypy.json
 /lfet/**/*.lfet.$bak.*
 /lfet/**/*.lfet.*.$bak
 /lfet/**/*.lfet_$temp
+/lfet/**/*console.txt
 
 # optional LF-ET license info
 /.lfet/*.info
