folder structure was changed for first PiPI package

--- a/lfet/ItemBuilderEngineFaker.lfet.yaml
+++ b/lfet/ItemBuilderEngineFaker.lfet.yaml
@@ -1,6 +1,6 @@
 lfet.project.ini:
   ide.Python:
     Source:
-      Path: ${project.root}/../src/SynData/common
+      Path: ${project.root}/../SynData/common
       Encoding: UTF-8
       CreateMissingFolders: true
