--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+
+
 # Robot Framework Logs
 /results/**/*.*
 
@@ -142,3 +144,7 @@ dmypy.json
 
 # Visual Studio 
 /.vscode/**
+
+# Poetry
+poetry.lock
+/.idea/**/*.*
